Typo `s/no/now`

--- a/content/blog/automatically-deploying-hugo-website-via-github-actions.asciidoc
+++ b/content/blog/automatically-deploying-hugo-website-via-github-actions.asciidoc
@@ -48,7 +48,7 @@ This will create two files, the public key (_gh-pages.pub_) and the private key 
 Go to https://github.com/<your-user-or-organisation>/<your-repo>/settings/keys and click "Add deploy key".
 Paste in the *public* part of your key pair and check the "Allow write access" box.
 
-No go to https://github.com/<your-user-or-organisation>/<your-repo>/settings/secrets and click "Add new secret". Choose `ACTIONS_DEPLOY_KEY` as the name and paste the *private* part of your key pair into the "Value" field.
+Now go to https://github.com/<your-user-or-organisation>/<your-repo>/settings/secrets and click "Add new secret". Choose `ACTIONS_DEPLOY_KEY` as the name and paste the *private* part of your key pair into the "Value" field.
 
 The key will be stored in an encrypted way as per GitHub's documentation
 Nevertheless I'd recommend to use a specific key pair just for this purpose, instead of re-using any other key pair.
