--- a/content/blog/bytebuffer-and-the-dreaded-nosuchmethoderror.asciidoc
+++ b/content/blog/bytebuffer-and-the-dreaded-nosuchmethoderror.asciidoc
@@ -151,7 +151,7 @@ buffer = buffer.position(1);
 ...
 ----
 
-Et voilà, this gets rejected by the compiler, as the JDK 1.8 method `Buffer#position(int)` cannot be assigned to `ByteBuffer`:
+Et voilà, this gets rejected by the compiler, as the return type of the JDK 1.8 method `Buffer#position(int)` cannot be assigned to `ByteBuffer`:
 
 [source,shell]
 ----
