--- a/content/blog/jlinks-missing-link-api-signature-validation.asciidoc
+++ b/content/blog/jlinks-missing-link-api-signature-validation.asciidoc
@@ -285,7 +285,7 @@ The required boiler plate can be nicely encapsulated within a shell function:
 function myjlink { \
   $JAVA_HOME/bin/jlink \
     -J-javaagent:signature-check-jlink-plugin-registration-agent-1.0-SNAPSHOT.jar \
-    -J--module-path)signature-check-jlink-plugin-1.0-SNAPSHOT.jar:path/to/animal-sniffer-1.19.jar:path/to/asm-9.0.jar \
+    -J--module-path=signature-check-jlink-plugin-1.0-SNAPSHOT.jar:path/to/animal-sniffer-1.19.jar:path/to/asm-9.0.jar \
     -J--add-modules=dev.morling.jlink.plugins.sigcheck "$@" \
 }
 ----
