--- a/content/blog/talking-to-postgres-through-java-16-unix-domain-socket-channels.asciidoc
+++ b/content/blog/talking-to-postgres-through-java-16-unix-domain-socket-channels.asciidoc
@@ -33,7 +33,7 @@ Running on the same machine as a client application
 (e.g. in a sidecar container in case of Kubernetes deployments),
 they provide secure access to a managed database, for instance taking care of the SSL handling.
 
-My curiousity was picked and I was wondering what it'd take to make use of the new Java 16 Unix domain socket for connecting to Postgres.
+My curiousity was piqued and I was wondering what it'd take to make use of the new Java 16 Unix domain socket for connecting to Postgres.
 It was your regular evening during the pandemic,
 without much to do, so I thought "Let's give this a try".
 To have a testing bed, I started with installing Postgres 13 on Fedora 33.
