--- a/content/blog/talking-to-postgres-through-java-16-unix-domain-socket-channels.asciidoc
+++ b/content/blog/talking-to-postgres-through-java-16-unix-domain-socket-channels.asciidoc
@@ -11,6 +11,8 @@ ifdef::env-github[]
 :imagesdir: ../../static/images
 endif::[]
 
+_Update Feb 5: This post is https://news.ycombinator.com/item?id=26012466[discussed on Hacker News]_
+
 Reading a blog post about what's https://www.loicmathieu.fr/wordpress/en/informatique/java-16-quoi-de-neuf/[coming up in JDK 16] recently,
 I learned that one of the new features is support for Unix domain sockets (https://openjdk.java.net/jeps/380[JEP 380]).
 Before Java 16, you'd have to resort to 3rd party libraries like https://github.com/jnr/jnr-unixsocket[jnr-unixsocket] in order to use them.
