--- a/content/blog/fizzbuzz-simd-style.asciidoc
+++ b/content/blog/fizzbuzz-simd-style.asciidoc
@@ -19,7 +19,7 @@ as defined by https://openjdk.java.net/jeps/338[JEP 338].
 _Vectors?!?_
 Of course this is not about renewing the ancient Java collection types like `java.util.Vector`
 (<insert some pun about this here>),
-but rather about an API which lets Java delopers take advantages of the vector calculation capabilities you can find in most CPUs these days.
+but rather about an API which lets Java delopers take advantage of the vector calculation capabilities you can find in most CPUs these days.
 Now I'm by no means an expert on low-level programming leveraging specific CPU instructions,
 but exactly that's why I hope to make the case with this post that the new Vector API makes these capabilities approachable to a wide audience of Java programmers.
 
